[gd_scene load_steps=8 format=3 uid="uid://dus2f8v06tv1k"]

[ext_resource type="Script" path="res://scripts/test/grid_test.gd" id="1_3qegs"]
[ext_resource type="Script" path="res://scripts/battle/grid_manager.gd" id="1_ysxlc"]
[ext_resource type="Script" path="res://scripts/battle/battle_manager.gd" id="3_ooewx"]
[ext_resource type="Script" path="res://scripts/battle/turn_manager.gd" id="4_0wk8t"]
[ext_resource type="Script" path="res://scripts/battle/battle_ui.gd" id="5_yn21y"]
[ext_resource type="Script" path="res://scripts/battle/Camera3D.gd" id="6_vgux4"]

[sub_resource type="MeshLibrary" id="MeshLibrary_8ko86"]

[node name="GridTest" type="Node3D"]
script = ExtResource("1_3qegs")

[node name="GridManager" type="Node3D" parent="."]
script = ExtResource("1_ysxlc")

[node name="GridMap" type="GridMap" parent="GridManager"]
mesh_library = SubResource("MeshLibrary_8ko86")

[node name="BattleUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_yn21y")

[node name="TurnEndButton" type="Button" parent="BattleUI"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -90.0
offset_top = -31.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(0.828373, 0.879104, 0.979535, 1)
theme_override_font_sizes/font_size = 20
text = "TURN END"

[node name="UnitInfoPanel" type="Panel" parent="BattleUI"]
layout_mode = 1
offset_left = 10.0
offset_top = 10.0
offset_right = 310.0
offset_bottom = 90.0

[node name="UnitNameLabel" type="Label" parent="BattleUI/UnitInfoPanel"]
layout_mode = 0
offset_left = 10.0
offset_top = 5.0
offset_right = 200.0
offset_bottom = 31.0
text = "Unit Name Lv.1"

[node name="HPBar" type="ProgressBar" parent="BattleUI/UnitInfoPanel"]
custom_minimum_size = Vector2(280, 27)
layout_mode = 0
offset_left = 10.0
offset_top = 35.0
offset_right = 290.0
offset_bottom = 62.0
value = 100.0

[node name="HPLabel" type="Label" parent="BattleUI/UnitInfoPanel"]
layout_mode = 0
offset_left = 210.0
offset_top = 5.0
offset_right = 290.0
offset_bottom = 31.0
text = "31/31"

[node name="ActionButtons" type="HBoxContainer" parent="BattleUI"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -263.0
offset_right = 164.0
grow_vertical = 0

[node name="AttackButton" type="Button" parent="BattleUI/ActionButtons"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
text = "攻撃"

[node name="MagicButton" type="Button" parent="BattleUI/ActionButtons"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
text = "魔法"

[node name="WaitButton" type="Button" parent="BattleUI/ActionButtons"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
text = "待機"

[node name="BattleManager" type="Node" parent="."]
script = ExtResource("3_ooewx")

[node name="TurnManager" type="Node" parent="."]
script = ExtResource("4_0wk8t")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(0.707107, 0.5, 0.5, 0, 0.707107, -0.707107, -0.707107, 0.5, 0.5, 10, 15, 10)
script = ExtResource("6_vgux4")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 10, 10, 10)
